--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -13,9 +13,11 @@ body
 {
     display: flex;
     margin: auto;
-    max-width: 1200px;
+    max-width: 880px;
+    width: 100%;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    height: 43.125em;
 }
 
 /* POLICE */ 
@@ -142,7 +144,9 @@ body
 header h1
 {
     font-family: 'metropolisbold', 'Arial', serif;
-    font-size: 3em;
+    font-size: 2.5em;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 aside, footer
@@ -166,13 +170,15 @@ section i
 {
     font-family: 'devonshireregular', Arial, serif;
     font-weight: normal;
-    font-size: 2.5em;
+    font-size: 1.5em;
+    margin-top: 0px;
 }
 
 #menu_un h3
 {
     font-family: 'flow_extbold', Arial, serif;
-    font-size: 2.5em;
+    font-size: 1.7em;
+    margin-top: -15px;
 }
 
     /* CARTE DEUX*/
@@ -180,29 +186,31 @@ section i
 {
     font-family: 'croissant_oneregular', Arial, serif;
     font-weight: normal;
-    font-size: 1.5em;
+    font-size: 1.1em;
 }
 
 #menu_deux h3
 {
     font-family: 'superclarendonregular';
     font-weight: normal;
-    font-size: 2.5em;
+    font-size: 1.7em;
+    margin-top: -5px;
 }
 
     /* CARTE TROIS */
 #menu_trois h2
 {
     font-family: 'dancing_scriptregular', Arial, serif;
-    font-size: 2.5em;
+    font-size: 1.5em;
     font-weight: normal;
 }
 
 #menu_trois h3
 {
     font-family: 'rujis_handwriting_font_v.2.Md', Arial, serif;
-    font-size: 2.5em;
+    font-size: 1.9em;
     font-weight: normal;
+    margin-top: -5px;
 }
 
     /* CARTE QUATRE */
@@ -210,14 +218,15 @@ section i
 {
     font-family: 'kaushan_scriptregular', Arial, serif;
     font-weight: normal;
-    font-size: 2.5em;
+    font-size: 1.5em;
 }
 
 #menu_quatre h3
 {
     font-family: 'rujis_handwriting_font_v.2.Md', Arial, serif;
-    font-size: 2.5em;
+    font-size: 1.9em;
     font-weight: normal;
+    margin-top: -5px;
 }
 
     /* MENU */
@@ -288,26 +297,28 @@ header, header a, footer, footer a
 header
 {
     text-align: center;
+    width: 100%;
+    height: 55px;
 }
 
 /* SECTION */
 
 .restaurant
 {
-    width: 400px;
-    height: 500px;
-    margin: 5%;
+    width: 250px;
+    height: 300px;
     text-align: center;
+    margin: 2.5%;
 }
 
 .restaurant i
 {
-    margin-top: 40%;
+    margin-top: 45%;
 }
 
 .middle
 {
-    margin-top: 50%;
+    margin-top: 30%;
 }
 
 .zoom
@@ -328,7 +339,7 @@ header
     background: linear-gradient(to right, rgb(240, 74, 94), rgb(248, 161, 131));
     color:transparent;
     -webkit-background-clip: text;
-    font-size: 3.5em;
+    font-size: 2.5em;
 }
 
 #menu_deux h2
@@ -336,6 +347,7 @@ header
     background: linear-gradient(to right, rgb(216, 133, 46), rgb(144, 91, 253));
     color: transparent;
     -webkit-background-clip: text;
+    margin-top: 50%;
 }
 
 #menu_trois h2
@@ -343,6 +355,7 @@ header
     background: linear-gradient(to right, rgb(4, 49, 223), rgb(8, 135, 251));
     color: transparent;
     -webkit-background-clip: text;
+    margin-top: 40%;
 }
 
 #menu_quatre h2
@@ -350,6 +363,7 @@ header
     background: linear-gradient(to right, rgb(66, 151, 60), rgb(191, 255, 126));
     color: transparent;
     -webkit-background-clip: text;
+    margin-top: 40%;
 }
 
 .zoom
@@ -370,7 +384,7 @@ header
 
 aside h4
 {
-    font-size: 2em;
+    font-size: 1.5em;
     color: rgb(253, 203, 70);
     font-weight: normal;
     margin-top: auto;
@@ -383,15 +397,16 @@ aside h4
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 300px;
+    width: 270px;
     display: flex;
-    height: 50px;
+    height: 40px;
     justify-content: center;
 }
 
 aside
 {
     padding-bottom: 100px;
+    height: 0px;  
 }
 
 #suspension
@@ -451,6 +466,7 @@ footer
     position: fixed;
     bottom: 0px;
     width: 100%;
+    height: 55px;
 }
 
 footer a
@@ -462,15 +478,17 @@ footer h2
 {
     margin-left: 2%;
     margin-right: 2%;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 footer h2:hover
 {
-    animation: shake 0.5s;
+    animation: wiggle 0.5s;
     animation-iteration-count: infinite;
 }
 
-@keyframes shake 
+@keyframes wiggle 
 {
     0% {transform:translate(1px, 1px) rotate(0deg);}
     10% {transform:translate(-1px, -2px) rotate(-1deg);}
@@ -486,14 +504,6 @@ footer h2:hover
 }
 
 /* MENU CARTE */
-
-header h1
-{
-    margin-top: auto;
-    margin-bottom: auto;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
 
 .menu_section h2
 {
@@ -783,19 +793,18 @@ header h1
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     background-color: rgb(87, 156, 135);
     padding-left: 2%;
     padding-right: 2%;
-    padding-top: 1%;
     padding-bottom: 1%;
 }
 
 #mentions_legales h1
 {
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
     color: rgb(253, 203, 70);
     text-decoration: underline;
 }
@@ -807,13 +816,8 @@ header h1
 
 /* MEDIA QUERRIES */
 
-@media screen and (min-width:2000px)
+@media screen and (min-width:1620px)
 {
-    header h1
-    {
-        font-size: 4em;
-    }
-    
     .arabicfont
     {
         font-size: 3em;
@@ -865,6 +869,92 @@ header h1
     {
         font-size: 1.6em;
     }
+    
+    aside
+    {
+        margin-top: 1%;
+    }
+    
+    #bloc_restaurant
+    {
+        margin-top: 3%;
+    }
+}
+
+@media screen and (min-width:2560px)
+{
+    .restaurant
+    {
+        height: 30em;
+        width: 25em;
+    }
+    
+    #bloc_restaurant
+    {
+        max-width: 35%;
+        height: 70em;
+    }
+    
+    header 
+    {
+        height: 5em;
+    }
+    
+    header h1
+    {
+        font-size: 3.5em;
+    }
+    
+    footer
+    {
+        height: 5em;
+    }
+    
+    footer h2
+    {
+        font-size: 2em;
+    }
+    
+    aside h4
+    {
+        font-size: 2.5em;
+    }
+    
+    #prochainement
+    {
+        width: 15%;
+        height: 60px
+    }
+    
+    #suspension
+    {
+        margin-bottom: 12px;
+    }
+    
+    #menu_un i
+    {
+        font-size: 5em;
+    }
+    
+    #menu_un h2, #menu_trois h2, #menu_quatre h2
+    {
+        font-size: 3em
+    }
+    
+    #menu_deux h2
+    {
+        font-size: 2em;
+    }
+    
+    #menu_un h3, #menu_deux h3, #menu_trois h3, #menu_quatre h3
+    {
+        font-size: 3em;
+    }
+    
+    #menu_un h3
+    {
+        margin-top: -0.8em;
+    }
 }
 
 @media screen and (min-width:1024px)
@@ -896,11 +986,6 @@ header h1
 
 @media screen and (max-width:768px)
 {
-    #bloc_restaurant
-    {
-        width: 95%; 
-    }
-    
     .menu_carte h3:nth-child(2)
     {
         font-size: 2em;
@@ -912,11 +997,6 @@ header h1
     }
     
     #menu_carte_trois h3
-    {
-        font-size: 2.2em;
-    }
-
-    section:nth-child(2) h3
     {
         font-size: 2.2em;
     }
@@ -973,35 +1053,50 @@ header h1
     {
         width: 100%;
     }
-    
 }
 
-@media screen and (max-width:475px)
+@media screen and (max-width:555px)
 {
     #croissant_oneregular
     {
         font-size: 1.5em;
         width: 95%;
     }
-}
-
-@media screen and (max-width:425px)
-{
+    
+    #bloc_restaurant
+    {
+        height: auto;
+    }  
+    
+    footer
+    {
+        font-size: 0.7em;
+    }
+    
+    #menu_carte_deux
+    {
+        padding-top: 20px;
+    }
+    
+    #menu_carte_un .note_bas
+    {
+        flex-direction: column;
+        text-align: center;
+    }
+    
     aside h4
     {
-        font-size: 1.7em;
+        font-size: 1.4em;
     }
     
     #prochainement
     {
-        width: 270px;
+        width: 250px;
     }
-    
-    footer
-    {
-        font-size: 0.9em;
-    }
-    
+}
+
+@media screen and (max-width:425px)
+{
     #menu_carte_deux
     {
         padding-top: 20px;
@@ -1016,42 +1111,6 @@ header h1
 
 @media screen and (max-width:375px)
 {
-    header h1
-    {
-        font-size: 2.5em;
-    }
-    
-    .restaurant
-    {
-        font-size: 0.8em;
-        height: 350px;
-    }
-    
-    #menu_un i, .middle 
-    {
-        margin-top: 40%;
-    }
-    
-    #menu_un h3
-    {
-        margin-top: -0.5em; 
-    }
-    
-    aside h4
-    {
-        font-size: 1.4em;
-    }
-    
-    #prochainement
-    {
-        width: 250px;
-    }
-    
-    footer
-    {
-        font-size: 0.7em;
-    }
-    
     #menu_carte_deux h3
     {
         font-size: 1.5em;
